# meowplayer

./: Cargo.toml  classes.scss  colors.scss  fonts.scss  index.html  styles.scss
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: divider.rs  divider.scss  side_panel.rs  side_panel.scss  title_bar.rs  title_bar.scss  top_panel.rs  top_panel.scss
