[package]
name = "musicnya-rust-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
web-sys = "0.3.63"
js-sys = "0.3.63"

[workspace]
members = ["src-tauri"]
